# RUST_FNN_LMA

./: .gitignore  Cargo.toml  README.md  error.csv  error_test.csv  error_val.csv  m.csv  mus.csv  test.model  test.rs  time.csv
example/: main.rs  main_1Dbenchmark.rs
output/: README_midterm.md  error.csv  error_test.csv  error_val.csv  error_val_new.csv  errornew.csv  m.csv  mus.csv  time.csv
src/: core.rs  error.rs  lib.rs  models.rs  prelude.rs  utils.rs
src/benchmark/: functions.rs
src/core/: activations.rs  layers.rs  losses.rs  normalization.rs  optimizers.rs  output.rs
src/gui/: test.rs  testkiss3d.rs
src/plot/: plot_comparision.rs  plot_errors_over_epochs.rs
