[profile.release]
debug = true
lto = false

[package]
name = "rkl"
version = "0.1.0"
edition = "2021"

[lib]
name = "rkl"
path = "./src/lib.rs"

[dependencies]
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-rand = "0.15.0"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
bincode = "1.3.3"
savefile="0.18.5"
savefile-derive="0.18.5"
plotters = "0.3.7"
colorous = "1.0.15"
nalgebra = "0.33.2"
faer = "0.21.3"
fastapprox = "0.3.1"
rayon = "1.8"
#eframe = "0.29.1"
#egui_extras = "0.29.1"
#egui = "0.29.1"
#egui_plot = "0.29"
#autograd = "1.1.1"

csv = "1.3.1"

#[profile.dev.package.faer]
#opt-level = 3


# [[bin]]
# name="main"
# path="./example/main.rs"^

[[bin]]
name = "main_benchmark"
path = "./example/main_1Dbenchmark.rs"

#[[bin]]
#name = "gui"
#path = "./src/gui/testkiss3d.rs"